--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/operatore.css?v=1.1">
 
     <!-- Core Engine -->
 
@@ -54,17 +54,17 @@
     </style>
 </head>
 
-<body class="titanium-bg">
+<body class="base-bg">
 
-    <div class="titanium-container">
-        <div class="titanium-glow"></div>
+    <div class="base-container">
+        <div class="base-glow"></div>
 
         <!-- Automated Titanium Header -->
-        <header id="header-placeholder" class="titanium-header"></header>
+        <header id="header-placeholder" class="base-header"></header>
         <div class="spacer-header"></div>
 
         <!-- Main Content -->
-        <main class="titanium-main">
+        <main class="base-main">
             <div class="min-h-full flex flex-col">
 
                 <!-- 1. Logo Upload -->
@@ -510,7 +510,7 @@
                                         placeholder="pec@azienda.it" />
                                     <div class="relative">
                                         <input id="email-pec-password" type="text"
-                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
+                                            class="base-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password PEC" />
                                         <button type="button" onclick="togglePasswordVisibility('email-pec-password')"
                                             class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-white p-1">
@@ -539,7 +539,7 @@
                                         placeholder="amministrazione@azienda.it" />
                                     <div class="relative">
                                         <input id="email-amministrazione-password" type="text"
-                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
+                                            class="base-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-amministrazione-password')"
@@ -566,7 +566,7 @@
                                         placeholder="personale@azienda.it" />
                                     <div class="relative">
                                         <input id="email-personale-password" type="text"
-                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
+                                            class="base-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-personale-password')"
@@ -593,7 +593,7 @@
                                         placeholder="manutenzione@azienda.it" />
                                     <div class="relative">
                                         <input id="email-manutenzione-password" type="text"
-                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
+                                            class="base-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-manutenzione-password')"
@@ -621,7 +621,7 @@
                                         placeholder="attrezzatura@azienda.it" />
                                     <div class="relative">
                                         <input id="email-attrezzatura-password" type="text"
-                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
+                                            class="base-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-attrezzatura-password')"
@@ -648,7 +648,7 @@
                                         placeholder="magazzino@azienda.it" />
                                     <div class="relative">
                                         <input id="email-magazzino-password" type="text"
-                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
+                                            class="base-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-magazzino-password')"
@@ -688,7 +688,7 @@
             </div>
         </main>
         <!-- Footer Standard -->
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
