--- a/Frontend/public/dettaglio_account_azienda.html
+++ b/Frontend/public/dettaglio_account_azienda.html
@@ -14,27 +14,25 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
-    <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
+    <!-- Design System Master (Protocollo 1) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=1.1">
 
     <!-- Core Engine -->
-
     <script src="assets/js/core.js?v=3.1"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
-        <div class="titanium-glow"></div>
+<body class="base-bg">
+    <div class="base-container">
+        <div class="base-glow"></div>
 
-        <!-- Standard Titanium Header -->
-        <!-- Automated Titanium Header -->
-        <header id="header-placeholder" class="titanium-header"></header>
+        <!-- Automated Header -->
+        <header id="header-placeholder"></header>
 
         <!-- Header Spacer -->
         <div class="spacer-header"></div>
 
-        <main class="titanium-main">
+        <main class="base-main">
             <!-- Hero Profile Header -->
             <div class="hero-profile-header">
                 <!-- Top Accent Bar (Dynamic) -->
@@ -68,7 +66,7 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="username">Utente</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-username" type="text" readonly class="titanium-shield">
+                                <input id="detail-username" type="text" readonly class="base-shield">
                                 <button class="glass-field-btn copy-btn">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
@@ -79,7 +77,7 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="account_code">Account / Codice</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-account" type="text" readonly class="titanium-shield">
+                                <input id="detail-account" type="text" readonly class="base-shield">
                                 <button class="glass-field-btn copy-btn">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
@@ -113,7 +111,7 @@
                             <span class="view-label" data-t="password">Password</span>
                             <div class="glass-field border-glow">
                                 <input id="detail-password" type="text" readonly
-                                    class="titanium-shield field-value-password">
+                                    class="base-shield field-value-password">
                                 <button id="toggle-password" class="glass-field-btn">
                                     <span class="material-symbols-outlined">visibility</span>
                                 </button>
@@ -235,7 +233,6 @@
                 </section>
 
                 <!-- SECTION: OPZIONI E VISIBILITA -->
-                <!-- SECTION: OPZIONI E VISIBILITA -->
                 <section class="section-pb-10">
                     <div class="detail-section-header">
                         <span class="material-symbols-outlined detail-section-icon icon-purple">visibility</span>
@@ -251,7 +248,7 @@
                                 </div>
                             </div>
                             <input type="checkbox" id="detail-shared" class="hidden">
-                            <div class="titanium-switch"></div>
+                            <div class="base-switch"></div>
                         </label>
 
                         <label class="visibility-option-card border-glow">
@@ -263,7 +260,7 @@
                                 </div>
                             </div>
                             <input type="checkbox" id="detail-hasMemo" class="hidden">
-                            <div class="titanium-switch"></div>
+                            <div class="base-switch"></div>
                         </label>
 
                         <label class="visibility-option-card border-glow">
@@ -275,7 +272,7 @@
                                 </div>
                             </div>
                             <input type="checkbox" id="detail-isMemoShared" class="hidden">
-                            <div class="titanium-switch"></div>
+                            <div class="base-switch"></div>
                         </label>
                     </div>
 
@@ -311,7 +308,7 @@
         <div class="spacer-footer"></div>
 
         <!-- FOOTER PLACEHOLDER -->
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder"></footer>
 
         <!-- Scripts -->
         <script type="module" src="assets/js/main.js?v=3.1"></script>
