--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
-    <!-- Design System Master (Base Pagine Standard) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
+    <!-- Design System Master (Protocollo 1) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=1.1">
 
     <!-- Core Engine -->
     <script src="assets/js/core.js?v=3.1"></script>
@@ -101,7 +101,7 @@
                             <span class="view-label" data-t="username">Utente</span>
                             <div class="base-card border-glow p-3 flex items-center justify-between">
                                 <input id="detail-username" type="text" readonly
-                                    class="bg-transparent border-none w-full text-primary titanium-shield"
+                                    class="bg-transparent border-none w-full text-primary base-shield"
                                     style="text-transform: none;">
                                 <button class="btn-icon-header copy-btn">
                                     <span class="material-symbols-outlined">content_copy</span>
@@ -114,7 +114,7 @@
                             <span class="view-label" data-t="account_code">Account / Codice</span>
                             <div class="base-card border-glow p-3 flex items-center justify-between">
                                 <input id="detail-account" type="text" readonly
-                                    class="bg-transparent border-none w-full text-primary titanium-shield"
+                                    class="bg-transparent border-none w-full text-primary base-shield"
                                     style="text-transform: none;">
                                 <button class="btn-icon-header copy-btn">
                                     <span class="material-symbols-outlined">content_copy</span>
@@ -127,7 +127,7 @@
                             <span class="view-label" data-t="password">Password</span>
                             <div class="base-card border-glow p-3 flex items-center justify-between">
                                 <input id="detail-password" type="text" readonly
-                                    class="bg-transparent border-none w-full text-primary titanium-shield field-value-password"
+                                    class="bg-transparent border-none w-full text-primary base-shield field-value-password"
                                     style="text-transform: none;">
                                 <div class="flex gap-2">
                                     <button id="toggle-password" class="btn-icon-header">
