--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="titanium-forced-dark">
+<html lang="it" class="dark protocol-forced-dark">
 
 <head>
     <meta charset="utf-8" />
@@ -18,74 +18,63 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- TITANIUM CORE & ACCESS SYSTEM (Protocollo V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
+    <!-- CORE STYLES -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.1">
 
-    <!-- Core UI & Engine (Protocollo V3.1) -->
-
+    <!-- CORE JS -->
     <script src="assets/js/core.js?v=3.1"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
-<body class="titanium-bg">
+<body class="base-bg">
 
-    <div class="titanium-container">
+    <div class="base-container">
 
-        <!-- LANGUAGE SELECTOR -->
-        <div class="lang-selector-container">
-            <button class="lang-btn-float" id="lang-toggle-btn">
-                <span class="material-symbols-outlined text-18">language</span>
-                <span class="lang-label" data-t="language">Lingua</span>
-                <span class="material-symbols-outlined text-16">expand_more</span>
-            </button>
-            <div class="lang-dropdown" id="lang-dropdown">
-                <!-- JS popola questo -->
-            </div>
-        </div>
-
-        <!-- Scenografia Protocollo V3.1 -->
-        <div class="titanium-glow"></div>
-        <div class="glass-glow"></div>
-        <div class="accesso-header"></div>
-        <div class="accesso-footer"></div>
+        <!-- Scenografia -->
+        <div class="base-glow"></div>
 
         <!-- Card Nuova Password -->
-        <div class="titanium-vault border-glow">
+        <div class="auth-card border-glow">
             <!-- SAETTA MASTER ANIMATION -->
             <div class="saetta-master"></div>
+            <div class="saetta-drop"></div>
+
 
             <!-- Icona Centrale -->
-            <div class="security-icon-box">
+            <div class="auth-icon-box">
                 <span class="material-symbols-outlined">vpn_key</span>
             </div>
 
             <!-- Titoli -->
-            <h1 class="accesso-title" data-t="set_password_page_title">Nuova Password</h1>
-            <p class="accesso-subtitle" data-t="password_req_title">Scegli una password sicura</p>
+            <h1 class="auth-title" data-t="set_password_page_title">Nuova Password</h1>
+            <p class="auth-subtitle" data-t="password_req_title">Scegli una password sicura</p>
 
             <!-- Form Salvataggio -->
             <form id="new-password-form">
 
                 <!-- Nuova Password -->
-                <div class="accesso-form-group">
-                    <label class="accesso-label" data-t="new_password">Nuova Password</label>
-                    <input id="new-password" name="new-password" type="password" autocomplete="new-password" required
-                        class="accesso-input" data-t-placeholder="password_placeholder_reg" placeholder="********">
-
-                    <button type="button" class="toggle-password" id="btn-toggle-password" aria-label="Mostra Password">
-                        <span class="material-symbols-outlined">visibility</span>
-                    </button>
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="new_password">Nuova Password</label>
+                    <div class="password-wrapper">
+                        <input id="new-password" name="new-password" type="password" autocomplete="new-password"
+                            required class="auth-input" data-t-placeholder="password_placeholder_reg"
+                            placeholder="********">
+                        <button type="button" class="toggle-password" id="btn-toggle-password"
+                            aria-label="Mostra Password">
+                            <span class="material-symbols-outlined">visibility</span>
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Conferma Password -->
-                <div class="accesso-form-group">
-                    <label class="accesso-label" data-t="confirm_new_password">Conferma Password</label>
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
                     <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
-                        required class="accesso-input" placeholder="********">
+                        required class="auth-input" placeholder="********">
                 </div>
 
                 <!-- Submit Button -->
-                <button type="submit" id="new-pass-submit-btn" class="accesso-btn" data-t="save_new_pass">
+                <button type="submit" id="new-pass-submit-btn" class="auth-btn-primary" data-t="save_new_pass">
                     <span class="material-symbols-outlined text-20">save</span>
                     Salva Password
                 </button>
@@ -93,15 +82,16 @@
             </form>
 
             <!-- Annulla Link -->
-            <div class="text-center mt-6">
-                <a href="index.html" id="cancel-password-update" class="link-register" data-t="cancel">
+            <div style="margin-top: 1.5rem; text-align: center;">
+                <a href="index.html" id="cancel-password-update" class="link-register" style="margin-top: 0;"
+                    data-t="cancel">
                     Annulla
                 </a>
             </div>
 
             <!-- Footer Legale -->
             <div class="legal-footer">
-                <span class="opacity-50">Titanium Protocol V3.1</span>
+                <span class="opacity-50">&copy; 2026</span>
             </div>
 
         </div>
