--- a/Frontend/public/modifica_account_azienda.html
+++ b/Frontend/public/modifica_account_azienda.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/operatore.css?v=1.1">
 
     <!-- Core Engine -->
 
@@ -50,17 +50,17 @@
     </style>
 </head>
 
-<body class="titanium-bg">
+<body class="base-bg">
 
-    <div class="titanium-container">
-        <div class="titanium-glow"></div>
+    <div class="base-container">
+        <div class="base-glow"></div>
 
         <!-- Automated Titanium Header -->
-        <header id="header-placeholder" class="titanium-header"></header>
+        <header id="header-placeholder" class="base-header"></header>
         <div class="spacer-header"></div>
 
         <!-- Main Content -->
-        <main class="titanium-main">
+        <main class="base-main">
             <div class="w-full max-w-3xl mx-auto py-8 px-6 flex-col gap-8">
 
                 <!-- Logo Uploader -->
@@ -192,12 +192,12 @@
                                     <span
                                         class="material-symbols-outlined absolute-left-3-center-y text-gray-500 text-20">key</span>
                                     <input id="password" type="text"
-                                        class="titanium-shield w-full h-12 pl-10 pr-20 rounded-xl text-sm font-medium outline-none text-mono-wide"
+                                        class="base-shield w-full h-12 pl-10 pr-20 rounded-xl text-sm font-medium outline-none text-mono-wide"
                                         placeholder="********" />
                                     <!-- Visibility & Copy -->
                                     <div class="absolute-right-2-center-y flex items-center">
                                         <button type="button"
-                                            onclick="const i = document.getElementById('password'); i.classList.toggle('titanium-shield'); this.querySelector('span').textContent = i.classList.contains('titanium-shield')?'visibility':'visibility_off';"
+                                            onclick="const i = document.getElementById('password'); i.classList.toggle('base-shield'); this.querySelector('span').textContent = i.classList.contains('base-shield')?'visibility':'visibility_off';"
                                             class="p-1-5 text-gray-400 border-none bg-transparent cursor-pointer rounded-lg transition-all flex items-center">
                                             <span class="material-symbols-outlined icon-18">visibility</span>
                                         </button>
@@ -316,7 +316,7 @@
                             </div>
                             <label class="relative inline-flex items-center cursor-pointer">
                                 <input class="absolute size-0 opacity-0" type="checkbox" id="flag-shared" />
-                                <div class="titanium-switch"></div>
+                                <div class="base-switch"></div>
                             </label>
                         </div>
 
@@ -362,7 +362,7 @@
                             </div>
                             <label class="relative inline-flex items-center cursor-pointer">
                                 <input class="absolute size-0 opacity-0" type="checkbox" id="flag-memo" />
-                                <div class="titanium-switch titanium-switch-orange"></div>
+                                <div class="base-switch titanium-switch-orange"></div>
                             </label>
                         </div>
 
@@ -382,7 +382,7 @@
                             </div>
                             <label class="relative inline-flex items-center cursor-pointer">
                                 <input class="absolute size-0 opacity-0" type="checkbox" id="flag-memo-shared" />
-                                <div class="titanium-switch titanium-switch-green"></div>
+                                <div class="base-switch titanium-switch-green"></div>
                             </label>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
 
         <div class="spacer-footer"></div>
         <!-- FOOTER PREMIUM -->
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Script -->
