--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="titanium-forced-dark">
+<html lang="it" class="dark protocol-forced-dark">
 
 <head>
     <meta charset="utf-8" />
@@ -18,63 +18,50 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- TITANIUM CORE & ACCESS SYSTEM (Protocollo V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
+    <!-- CORE STYLES -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.1">
 
-    <!-- Core UI & Engine (Protocollo V3.1) -->
-
+    <!-- CORE JS -->
     <script src="assets/js/core.js?v=3.1"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
-<body class="titanium-bg">
+<body class="base-bg">
 
-    <div class="titanium-container">
+    <div class="base-container">
 
-        <!-- LANGUAGE SELECTOR -->
-        <div class="lang-selector-container">
-            <button class="lang-btn-float" id="lang-toggle-btn">
-                <span class="material-symbols-outlined text-18">language</span>
-                <span class="lang-label" data-t="language">Lingua</span>
-                <span class="material-symbols-outlined text-16">expand_more</span>
-            </button>
-            <div class="lang-dropdown" id="lang-dropdown">
-                <!-- JS popola questo -->
-            </div>
-        </div>
-
-        <!-- Scenografia Protocollo V3.1 -->
-        <div class="titanium-glow"></div>
-        <div class="glass-glow"></div>
-        <div class="accesso-header"></div>
-        <div class="accesso-footer"></div>
+        <!-- Scenografia -->
+        <div class="base-glow"></div>
 
         <!-- Card Reset -->
-        <div class="titanium-vault border-glow">
+        <div class="auth-card border-glow">
             <!-- SAETTA MASTER ANIMATION -->
             <div class="saetta-master"></div>
+            <div class="saetta-drop"></div>
+
+
 
             <!-- Icona Centrale -->
-            <div class="security-icon-box">
+            <div class="auth-icon-box">
                 <span class="material-symbols-outlined">lock_reset</span>
             </div>
 
             <!-- Titoli -->
-            <h1 class="accesso-title" data-t="reset_page_title">Recupera Password</h1>
-            <p class="accesso-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
+            <h1 class="auth-title" data-t="reset_page_title">Recupera Password</h1>
+            <p class="auth-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
 
             <!-- Form Recupero -->
             <form id="reset-form">
 
                 <!-- Email -->
-                <div class="accesso-form-group">
-                    <label class="accesso-label" data-t="email_address_label">Email dell'account</label>
-                    <input id="email" name="email" type="email" autocomplete="email" required class="accesso-input"
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="email_address_label">Email dell'account</label>
+                    <input id="email" name="email" type="email" autocomplete="email" required class="auth-input"
                         data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
                 </div>
 
                 <!-- Submit Button -->
-                <button type="submit" id="reset-submit-btn" class="accesso-btn" data-t="send_instructions_btn">
+                <button type="submit" id="reset-submit-btn" class="auth-btn-primary" data-t="send_instructions_btn">
                     <span class="material-symbols-outlined text-20">send</span>
                     Invia email
                 </button>
@@ -82,16 +69,18 @@
             </form>
 
             <!-- Back Link -->
-            <div class="text-center mt-8">
-                <a href="index.html" class="link-register" data-t="back_to_login_link">
-                    <span class="material-symbols-outlined text-16 mr-3">arrow_back</span>
+            <div style="margin-top: 2rem; text-align: center;">
+                <a href="index.html" class="link-register"
+                    style="display: inline-flex; align-items: center; justify-content: center; color: rgba(255,255,255,0.6);"
+                    data-t="back_to_login_link">
+                    <span class="material-symbols-outlined text-16" style="margin-right: 0.5rem;">arrow_back</span>
                     Torna al Login
                 </a>
             </div>
 
             <!-- Footer Legale -->
             <div class="legal-footer">
-                <span class="opacity-50">Titanium Protocol V3.1</span>
+                <span class="opacity-50">&copy; 2026</span>
             </div>
 
         </div>
