--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-  <link rel="stylesheet" href="assets/css/Protocollo.1.css">
+  <link rel="stylesheet" href="assets/css/operatore.css">
 </head>
 
 <body class="home-page">
@@ -124,7 +124,10 @@
     </footer>
   </div>
 
+
+
   <!-- Logica Applicativa -->
+  <script type="module" src="assets/js/ui-core.js"></script>
   <script type="module" src="assets/js/home.js"></script>
 </body>
 
